--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/cli": "^11.1.1",
     "@angular/compiler-cli": "~11.1.1",
     "@types/node": "^12.20.10",
+    "@types/w3c-generic-sensor": "^1.0.5",
     "ts-node": "~8.3.0",
     "typescript": "~4.1.4"
   }
