Add lint config and devdeps, Lint

--- a/angular.json
+++ b/angular.json
@@ -83,6 +83,15 @@
           "options": {
             "browserTarget": "app:build"
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
