--- a/package.json
+++ b/package.json
@@ -25,10 +25,21 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.7",
+    "@angular-eslint/builder": "4.3.1",
+    "@angular-eslint/eslint-plugin": "4.3.1",
+    "@angular-eslint/eslint-plugin-template": "4.3.1",
+    "@angular-eslint/schematics": "4.3.1",
+    "@angular-eslint/template-parser": "4.3.1",
     "@angular/cli": "^11.1.1",
     "@angular/compiler-cli": "~11.1.1",
     "@types/node": "^12.20.10",
     "@types/w3c-generic-sensor": "^1.0.5",
+    "@typescript-eslint/eslint-plugin": "4.16.1",
+    "@typescript-eslint/parser": "4.16.1",
+    "eslint": "^7.6.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "prettier": "2.2.1",
     "ts-node": "~8.3.0",
     "typescript": "~4.1.4"
   }
