--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "prettier": "2.2.1",
     "ts-node": "~8.3.0",
-    "typescript": "~4.1.4"
+    "typescript": "~4.1.4",
+    "wasm-pack": "^0.10.1"
   }
 }
