--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,11 +26,12 @@ jobs:
         run: |-
           npx ng build --prod --output-path docs --base-href /star-trak-pwa/
           cp docs/index.html docs/404.html
-      - name: Commit and push to gh-pages
+      - name: Pull gh-pages branch
         uses: actions/checkout@v2
         with:
           ref: gh-pages
           path: gh-pages-workdir
+      - name: Commit and push to gh-pages
         run: |-
           git config user.name github-actions
           git config user.email github-actions@github.com
